samples/_failures_safe/1761200490_9d526a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca869152.c: In function ‘main’:
./samples/SAFE/__tmp_ca869152.c:163:28: error: missing terminating " character
  163 |                     printf("\
      |                            ^~
./samples/SAFE/__tmp_ca869152.c:163:21: error: expected expression at end of input
  163 |                     printf("\
      |                     ^~~~~~
./samples/SAFE/__tmp_ca869152.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca869152.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca869152.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca869152.c:163:21: error: expected declaration or statement at end of input
